--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.2.0",
   "private": true,
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.3",
+    "@openzeppelin/contracts-upgradeable": "^4.9.3",
     "@particle-network/auth-core-modal": "^1.3.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
+    "sass": "^1.72.0",
     "tiny-slider": "^2.9.4",
     "tiny-slider-react": "^0.5.7",
     "web-vitals": "^2.1.4",
@@ -51,6 +54,8 @@
     ]
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/hardhat-upgrades": "^3.0.5",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
