--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "1.2.0",
   "private": true,
   "dependencies": {
-    "@particle-network/auth-core-modal": "^1.3.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
-    "browserify-zlib": "^0.2.0",
     "feather-icons-react": "^0.6.2",
-    "form-data": "^4.0.0",
     "react": "^18.2.0",
     "react-18-image-lightbox": "^5.1.4",
     "react-dom": "^18.2.0",
@@ -23,13 +19,12 @@
     "react-select": "^5.7.4",
     "tiny-slider": "^2.9.4",
     "tiny-slider-react": "^0.5.7",
-    "web-vitals": "^2.1.4",
-    "web3": "^4.6.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -51,16 +46,6 @@
     ]
   },
   "devDependencies": {
-    "assert": "^2.1.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "process": "^0.11.10",
-    "react-app-rewired": "^2.2.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "tailwindcss": "^3.3.3",
-    "url": "^0.11.3"
+    "tailwindcss": "^3.3.3"
   }
 }
