--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/contracts-upgradeable": "^4.9.3",
-    "@particle-network/auth-core-modal": "^1.3.9",
+    "@particle-network/chains": "^1.3.26",
+    "@particle-network/connectkit": "^1.3.7",
+    "@particle-network/connectors": "^1.3.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "browserify-zlib": "^0.2.0",
+    "bignumber.js": "^9.1.2",
+    "clipboard": "^2.0.11",
+    "dotenv": "^16.4.5",
     "feather-icons-react": "^0.6.2",
     "form-data": "^4.0.0",
+    "ganache": "^7.9.2",
     "react": "^18.2.0",
     "react-18-image-lightbox": "^5.1.4",
     "react-dom": "^18.2.0",
@@ -57,6 +62,7 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.0.5",
     "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
