--- a/env.sample
+++ b/env.sample
@@ -1,6 +1,10 @@
-REACT_APP_PROJECT_ID=
-REACT_APP_CLIENT_KEY=
-REACT_APP_APP_ID=
-TESTNET_PRIVATE_KEY=
-TESTNET_RPC_URL=
-ETHSCAN_KEY=
+REACT_APP_PARTICLE_PROJECT_ID=
+REACT_APP_PARTICLE_CLIENT_KEY=
+REACT_APP_PARTICLE_APP_ID=
+REACT_APP_IPFS_IMAGE_URL=https://rpc.particle.network/ipfs/upload
+REACT_APP_IPFS_JSON_URL=https://rpc.particle.network/ipfs/upload_json
+REACT_APP_CONTRACT_PROXY_ADDRESS=
+REACT_APP_CHAIN_DEV_ADDRESS=http://185.230.64.119:8545
+REACT_APP_CHAIN_DEV_ID=1337
+REACT_APP_WALLETCONNECT_PROJECT_ID=
+REACT_APP_NETWORK='dev'
