--- a/env.sample
+++ b/env.sample
@@ -7,4 +7,4 @@ REACT_APP_CONTRACT_PROXY_ADDRESS=
 REACT_APP_CHAIN_DEV_ADDRESS=
 REACT_APP_CHAIN_DEV_ID=1337
 REACT_APP_WALLETCONNECT_PROJECT_ID=
-REACT_APP_NETWORK='dev'
+REACT_APP_NETWORK=dev
