--- a/env.sample
+++ b/env.sample
@@ -4,7 +4,7 @@ REACT_APP_PARTICLE_APP_ID=
 REACT_APP_IPFS_IMAGE_URL=https://rpc.particle.network/ipfs/upload
 REACT_APP_IPFS_JSON_URL=https://rpc.particle.network/ipfs/upload_json
 REACT_APP_CONTRACT_PROXY_ADDRESS=
-REACT_APP_CHAIN_DEV_ADDRESS=http://185.230.64.119:8545
+REACT_APP_CHAIN_DEV_ADDRESS=
 REACT_APP_CHAIN_DEV_ID=1337
 REACT_APP_WALLETCONNECT_PROJECT_ID=
 REACT_APP_NETWORK='dev'
