added user login functionality and user data

--- a/env.sample
+++ b/env.sample
@@ -4,7 +4,14 @@ REACT_APP_PARTICLE_APP_ID=
 REACT_APP_IPFS_IMAGE_URL=https://rpc.particle.network/ipfs/upload
 REACT_APP_IPFS_JSON_URL=https://rpc.particle.network/ipfs/upload_json
 REACT_APP_CONTRACT_PROXY_ADDRESS=
-REACT_APP_CHAIN_DEV_ADDRESS=
-REACT_APP_CHAIN_DEV_ID=1337
 REACT_APP_WALLETCONNECT_PROJECT_ID=
-REACT_APP_NETWORK=dev
+REACT_APP_CHAIN_ADDRESS_DEV=
+REACT_APP_CHAIN_ID_DEV=
+REACT_APP_API_ADDRESS_DEV=
+REACT_APP_CHAIN_ADDRESS_TESTING=
+REACT_APP_CHAIN_ID_TESTING=
+REACT_APP_API_ADDRESS_TESTING=
+REACT_APP_CHAIN_ADDRESS_PROD=
+REACT_APP_CHAIN_ID_PROD=
+REACT_APP_API_ADDRESS_PROD=
+REACT_APP_CURRENT_ENV=dev
