--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserify-zlib": "^0.2.0",
     "feather-icons-react": "^0.6.2",
     "form-data": "^4.0.0",
+    "nodejs": "^0.0.0",
     "react": "^18.2.0",
     "react-18-image-lightbox": "^5.1.4",
     "react-dom": "^18.2.0",
