--- a/env.sample
+++ b/env.sample
@@ -15,3 +15,4 @@ REACT_APP_CHAIN_ADDRESS_PROD=
 REACT_APP_CHAIN_ID_PROD=
 REACT_APP_API_ADDRESS_PROD=
 REACT_APP_CURRENT_ENV=dev
+REACT_APP_API_ADDRESS=
