--- a/env.sample
+++ b/env.sample
@@ -5,14 +5,12 @@ REACT_APP_IPFS_IMAGE_URL=https://rpc.particle.network/ipfs/upload
 REACT_APP_IPFS_JSON_URL=https://rpc.particle.network/ipfs/upload_json
 REACT_APP_CONTRACT_PROXY_ADDRESS=
 REACT_APP_WALLETCONNECT_PROJECT_ID=
-REACT_APP_CHAIN_ADDRESS_DEV=
+REACT_APP_API_ADDRESS=
+REACT_APP_CHAIN_ADDRESS_
 REACT_APP_CHAIN_ID_DEV=
-REACT_APP_API_ADDRESS_DEV=
 REACT_APP_CHAIN_ADDRESS_TESTING=
 REACT_APP_CHAIN_ID_TESTING=
-REACT_APP_API_ADDRESS_TESTING=
 REACT_APP_CHAIN_ADDRESS_PROD=
 REACT_APP_CHAIN_ID_PROD=
-REACT_APP_API_ADDRESS_PROD=
-REACT_APP_CURRENT_ENV=dev
-REACT_APP_API_ADDRESS=
+REACT_APP_ENV=dev
+REACT_APP_CHAIN_ENV=dev
