--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/contracts-upgradeable": "^4.9.3",
-    "@particle-network/auth-core-modal": "^1.3.9",
+    "@particle-network/chains": "^1.4.8",
+    "@particle-network/connectkit": "^1.4.1",
+    "@particle-network/connectors": "^1.3.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +18,8 @@
     "feather-icons-react": "^0.6.2",
     "form-data": "^4.0.0",
     "ganache": "^7.9.2",
+    "qs": "^6.12.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-18-image-lightbox": "^5.1.4",
     "react-dom": "^18.2.0",
