--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@particle-network/chains": "^1.4.8",
     "@particle-network/connectkit": "^1.4.1",
     "@particle-network/connectors": "^1.3.5",
+    "@particle-network/wallet": "^1.4.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "feather-icons-react": "^0.6.2",
     "form-data": "^4.0.0",
     "ganache": "^7.9.2",
+    "lodash": "^4.17.21",
     "qs": "^6.12.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
@@ -25,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^6.1.6",
     "react-modal-video": "^2.0.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
